Add in content (60%)

--- a/pages/comfort_prods.html
+++ b/pages/comfort_prods.html
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="col-lg-6 recommended-section">
-          <h3 class="text-center page-title">Picking the right diaper can be hassle at times...</h3>
+          <h3 class="text-center page-title">Picking the right diaper can be a hassle at times...</h3>
           <p class="title-desc mx-4 recommended-para">
             so we highly recommend the newest addition to the world of baby care - <a href="https://momcozy.sjv.io/c/2812006/1506337/16474" target="_blank" 
             style="color:black; ">BabyCozy</a>  Softest Diaper! Diapers that are designed with both the baby and the parent in mind. Made with soft, breathable materials and advanced leak protection technology, <a href="https://momcozy.sjv.io/c/2812006/1506337/16474" target="_blank" 
