--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="/styles/index.css">
     <link rel="stylesheet" href="/styles/main.css">
     <title>Mommies Baby</title>
@@ -89,44 +91,68 @@
           <h2 class="comfort-reason-title text-center">Mommies Essentials</h2>
           <div class="d-flex flex-column flex-lg-row justify-content-center " style=" padding: 35px;">
             <div class="p-2 mx-auto my-2 card" style="max-width:500px; border:6px double black;">
-              <img class="card-img-top img-fluid" src="https://cdn.shopify.com/s/files/1/0559/2321/2486/files/c454a92528c306a2332d74627c6355eb_600x.jpg?v=1673503913" alt="Card image cap" >
+              <img class="card-img-top img-fluid" style="border: 2px solid black; height: 530px;" src="https://cdn.shopify.com/s/files/1/0559/2321/2486/products/Momcozy4-in-1HandsFreePumpingBra_6_900x.png?v=1659075773" alt="Card image cap" >
               <div class="card-body text-center">
                 <h4 class="card-title comfort-reason-title">Momcozy 4-in-1 Hands-Free Pumping Bra</h4>
                 <div class="row">
                   <div class="col">
-                    <img src="/images/hands-free-benefit.jpg" alt="" class="img-fluid">
+                    <img src="/images/hands-free-benefit.jpg" alt="" class="img-fluid py-4">
                   </div>
                 </div>
                 <div class="row">
                   <div class="col">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text title-desc">Straps designed to be longer in length overall, allowing for enough extension to accommodate an in-bra pump comfortably and securely and the ability to criss-cross if desired. Cushioned wider straps help to reduce pressure off shoulders while pumping. Its increased cup capacity allows reduced compression during in-bra pumping while retaining its shape.</p>
                     <a href="https://momcozy.com/products/momcozy-4-in-1-hands-free-pumping-bra?irclickid=wngXkyWa9xyNTsg26aUA61WpUkAROmRxbwUj0k0&irgwc=1" class="btn btn-primary" style="background-color:rgb(180, 122, 36); border: none; box-shadow: -2px 2px 4px black;">View Product</a>
                   </div>
                 </div>
                 <div class="row py-4">
-                  <div class="col-6" style="border:6px double black;">
+                  <div class="col-6">
                     <img src="https://cdn.shopify.com/s/files/1/0559/2321/2486/products/Momcozy4-in-1HandsFreePumpingBra_6_900x.png?v=1659075773" alt="" class="img-fluid">
                   </div>
-                  <div class="col-6" style="border:6px double black;">
+                  <div class="col-6" >
                     <img src="https://cdn.shopify.com/s/files/1/0559/2321/2486/products/Momcozy4-in-1HandsFreePumpingBra_7_900x.png?v=1659002114" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
             </div>
             <div class="p-2 mx-auto card my-2" style="max-width:500px; border:6px double black;">
-              <img class="card-img-top img-fluid" src="/images/bby-1.jpg" alt="Card image cap ">
+              <img class="card-img-top img-fluid" style="border: 2px solid black; height: 450px; object-fit:fill" src="https://cdn.shopify.com/s/files/1/0559/2321/2486/products/3_a8bb62a7-c882-44ad-84ec-c162c03ae6c9_700x.jpg?v=1675328119" alt="Card image cap ">
               <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary" style="background-color:rgb(180, 122, 36); border: none; box-shadow: -2px 2px 4px black;">Go somewhere</a>
+                <h4 class="card-title comfort-reason-title">Momcozy 6-in-1 Fast Baby Bottle Warmer</h4>
+                <div>
+                  <img src="https://cdn.shopify.com/s/files/1/0559/2321/2486/files/6_760766cb-9ab9-4175-ae17-08c1b30c62b3_600x.jpg?v=1675318641" alt="" class="img-fluid">
+                </div>
+                <h4 class="py-4">Right at time, Right at temp</h4>
+                <p class="card-text title-desc">No complicated steps, just put in the bottles or bags and then choose the right milk status, bottle material, and milk volume, the smart bottle warmer will automatically heat to the temp closest to mom's breast milk, which helps your baby's digestion and retains the nutrients in the milk.</p>
+                <a href="https://momcozy.sjv.io/c/2812006/1506339/16474" class="btn btn-primary" style="background-color:rgb(180, 122, 36); border: none; box-shadow: -2px 2px 4px black;">View Product</a>
+              </div>
+              <div class="row py-4">
+                <div class="col-6" >
+                  <img src="https://cdn.shopify.com/s/files/1/0559/2321/2486/products/4_ae0d1c6a-cf2e-440f-ab9b-5f4b93460f15_700x.jpg?v=1675328119" alt="" class="img-fluid">
+                </div>
+                <div class="col-6" >
+                  <img src="https://cdn.shopify.com/s/files/1/0559/2321/2486/products/5_88b18bf5-9a81-4776-80b7-d8448451673b_700x.jpg?v=1675328119" alt="" class="img-fluid">
+                </div>
               </div>
             </div>
             <div class="p-2 mx-auto my-2 card" style="max-width:500px; border:6px double black;">
-              <img class="card-img-top img-fluid" src="/images/bby-1.jpg" alt="Card image cap " >
-              <div class="card-body text-center">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary" style="background-color:rgb(180, 122, 36); border: none; box-shadow: -2px 2px 4px black;">Go somewhere</a>
+              <img class="card-img-top img-fluid" style="border: 2px solid black; height: 530px; object-fit:fill"   src="https://cdn.shopify.com/s/files/1/0559/2321/2486/products/S9pro-NEW_900x.jpg?v=1678704506" alt="Card image cap " >
+              <div class="card-body">
+                <h4 class="card-title comfort-reason-title">S9 Pro Wearable Breast Pump - Long Battery</h4>
+                <div>
+                  <img src="https://cdn.shopify.com/s/files/1/0559/2321/2486/files/9_2_600x.gif?v=1663071171" alt=""  class="img-fluid">
+                </div>
+                <ul class="py-4">
+                  <li class="title-desc">One charge for one day</li>
+                  <li class="title-desc">Support 7 pumping sessions</li>
+                  <li class="title-desc">20% smaller motor to carry lighter</li>
+                  <li class="title-desc">The LED screen reads easily</li>
+                  <li class="title-desc">Seal-up connection for bigger suction</li>
+                  <li class="title-desc">Easy to use and clean</li>
+                </ul>
+                <div class="text-center">
+                  <a href="https://momcozy.sjv.io/c/2812006/1506345/16474" class="btn btn-primary" style="background-color:rgb(180, 122, 36); border: none; box-shadow: -2px 2px 4px black;">View Product</a>
+              </div>
               </div>
             </div>
           </div>
