--- a/pages/comfort_prods.html
+++ b/pages/comfort_prods.html
@@ -27,7 +27,7 @@
                 <a class="nav-link active" href="#" style="color:rgb(180, 122, 36)"  aria-current="page">Baby's Comfort</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="mommies.html" >Mommies Comfort</a>
+                <a class="nav-link" href="form.html" >Mommies Comfort</a>
               </li>
             </ul>
           </div>
