--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,7 @@
     <title>Mommies Baby</title>
 </head>
 <body>
+  
     <header>
         <nav class="navbar navbar-expand-lg bg-custom px-3 shadow-lg">
             <div class="container-fluid" style="--bs-gutter-x: 0;">
@@ -28,7 +29,7 @@
                     <a class="nav-link" href="comfort_prods.html" >Baby's Comfort</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="mommies.html" >Mommies Comfort</a>
+                    <a class="nav-link" href="form.html" >Mommies Comfort</a>
                   </li>
                 </ul>
               </div>
@@ -60,33 +61,6 @@
               </div>
             </div>
           </div>
-        </div>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner py-4">
-            <div class="carousel-item active">
-              <img class="d-block w-100 img-fluid" src="/images/bby-foot.jpg" alt="First slide" style="border-top: 2px solid black; border-bottom: 2px solid black;">
-            </div>
-            <div class="carousel-item position-relative">
-              <img class="d-block w-100 img-fluid" src="/images/Bby-yawn.jpg" alt="Second slide" style="border-top: 2px solid black; border-bottom: 2px solid black;">
-              <h3 class="p">Hands free pumping bra</h3>
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100 img-fluid" src="/images/comfort-1.jpg" alt="Third slide" style="border-top: 2px solid black; border-bottom: 2px solid black;">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" style="text-decoration: none;">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only" style="color: black;">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next" style="text-decoration: none;">
-            <span class="carousel-control-next-icon" aria-hidden="true" ></span>
-            <span class="sr-only" style="color: black;">Next</span>
-          </a>
         </div>
           <h2 class="comfort-reason-title text-center">Mommies Essentials</h2>
           <div class="d-flex flex-column flex-lg-row justify-content-center " style=" padding: 35px;">
