--- a/pages/comfort_prods.html
+++ b/pages/comfort_prods.html
@@ -27,7 +27,7 @@
                 <a class="nav-link active" href="#" style="color:rgb(180, 122, 36)"  aria-current="page">Baby's Comfort</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="form.html" >Mommies Comfort</a>
+                <a class="nav-link" href="form.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -110,8 +110,14 @@
         </div>
       </div>
     </div>
-      
-
     </main>
+    <footer class= "text-center text-lg-start page-footer">
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2023 Copyright:
+        <a class="text-dark" href="https://mdbootstrap.com/">Mommiesbaby.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer> 
 </body>
 </html>
