--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="comfort_prods.html" >Baby's Comfort</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="form.html" >Mommies Comfort</a>
+                    <a class="nav-link" href="form.html" >Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -131,9 +131,14 @@
             </div>
           </div>
     </main>
-    <footer>
-
-    </footer>
+    <footer class= "text-center text-lg-start page-footer">
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2023 Copyright:
+        <a class="text-dark" href="https://mdbootstrap.com/">Mommiesbaby.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer> 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
