--- a/pages/index.html
+++ b/pages/index.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous" defer></script>
-    <link rel="stylesheet" href="/styles/index.css">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Mommies Baby</title>
 </head>
 <body>
@@ -39,7 +39,7 @@
     <main>
       <div class="container-fluid" style="--bs-gutter-x: 0;">
         <div>
-          <img src="/images/header-img-baby.jpg" alt="" class="img-fluid" style="border-top: 2px solid black; border-bottom: 2px solid black;">
+          <img src="images/header-img-baby.jpg" alt="" class="img-fluid" style="border-top: 2px solid black; border-bottom: 2px solid black;">
         </div>
         <div class="container py-4 mt-4" style="border:6px double black">
           <div class="row">
@@ -53,10 +53,10 @@
             <div class="col-lg-6 mx-auto">
               <div class="row">
                 <div class="col">
-                  <img src="/images/homepage-img-1.jpg" alt="" class="img-fluid" style="border:6px double black">
+                  <img src="images/homepage-img-1.jpg" alt="" class="img-fluid" style="border:6px double black">
                 </div>
                 <div class="col">
-                  <img src="/images/homepage-img-2.jpg" alt="" class="img-fluid" style="border:6px double black">
+                  <img src="images/homepage-img-2.jpg" alt="" class="img-fluid" style="border:6px double black">
                 </div>
               </div>
             </div>
@@ -70,7 +70,7 @@
                 <h4 class="card-title comfort-reason-title">Momcozy 4-in-1 Hands-Free Pumping Bra</h4>
                 <div class="row">
                   <div class="col">
-                    <img src="/images/hands-free-benefit.jpg" alt="" class="img-fluid py-4">
+                    <img src="images/hands-free-benefit.jpg" alt="" class="img-fluid py-4">
                   </div>
                 </div>
                 <div class="row">
