--- a/comfort_prods.html
+++ b/comfort_prods.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous" defer></script>
-    <link rel="stylesheet" href="/styles/comfort.css">
+    <link rel="stylesheet" href="styles/comfort.css">
     <title>Comfort Products</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse px-3" id="navbarNav" style="border:4px double black">
             <ul class="navbar-nav mx-auto text-center" >
               <li class="nav-item">
-                <a class="nav-link " href="/pages/index.html" >Home</a>
+                <a class="nav-link " href="index.html" >Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#" style="color:rgb(180, 122, 36)"  aria-current="page">Baby's Comfort</a>
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="/images/bby-1.jpg" alt="" class="img-fluid" style="border:6px double black">
+            <img src="images/bby-1.jpg" alt="" class="img-fluid" style="border:6px double black">
           </div>
           <div class="col-lg-6 p-4 my-auto order-second">
             <p class="title-desc">
@@ -61,12 +61,12 @@
               </p>
             </div>
             <div class="col-lg-6 mx-auto my-3" style="max-width:450px;">
-              <img src="/images/diapers-1.jpg" alt="" class="img-fluid" style="border:6px double black">
+              <img src="images/diapers-1.jpg" alt="" class="img-fluid" style="border:6px double black">
             </div>
           </div>
           <div class="row my-4">
             <div class="col-lg-6 mx-auto my-3 order-second order-lg-first" style="max-width:450px;">
-              <img src="/images/mobility-1.jpg" alt="" class="img-fluid" style="border:6px double black">
+              <img src="images/mobility-1.jpg" alt="" class="img-fluid" style="border:6px double black">
             </div>
             <div class="col-lg-6 my-auto py-3 mx-auto order-first order-lg-second" style="border-top: 4px solid rgb(216, 214, 214); border-bottom: 4px solid rgb(211, 211, 211);">
               <p class="title-desc ">
@@ -81,7 +81,7 @@
               </p>
             </div>
             <div class="col-lg-6 mx-auto my-3" style="max-width:450px;">
-              <img src="/images/comfort-1.jpg" alt="" class="img-fluid" style="border:6px double black">
+              <img src="images/comfort-1.jpg" alt="" class="img-fluid" style="border:6px double black">
             </div>
           </div>
         </div>
@@ -91,10 +91,10 @@
           <div class="row ">
             <a href="https://momcozy.sjv.io/c/2812006/1506337/16474" style="color:black"><h3 class="text-center page-title">BabyCozy Soft Diapers</h3></a>
             <div class="col">
-              <a href="https://momcozy.sjv.io/c/2812006/1506337/16474"><img src="/images/BbyCozy-1.jpg" alt="" class="img-fluid"></a>
+              <a href="https://momcozy.sjv.io/c/2812006/1506337/16474"><img src="images/BbyCozy-1.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="col">
-              <a href="https://momcozy.sjv.io/c/2812006/1506337/16474"><img src="/images/BbyCozy-2.jpg" alt="" class="img-fluid"></a>
+              <a href="https://momcozy.sjv.io/c/2812006/1506337/16474"><img src="images/BbyCozy-2.jpg" alt="" class="img-fluid"></a>
             </div>
           </div>
         </div>
