--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="styles/mommies.css">
     <title>Mommies Comfort</title>
@@ -21,10 +21,10 @@
               <div class="collapse navbar-collapse px-3" id="navbarNav" style="border:4px double black">
                 <ul class="navbar-nav mx-auto text-center" >
                   <li class="nav-item">
-                    <a class="nav-link " href="/pages/index.html" >Home</a>
+                    <a class="nav-link " href="pages/index.html" >Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="/pages/comfort_prods.html" >Baby's Comfort</a>
+                    <a class="nav-link " href="pages/comfort_prods.html" >Baby's Comfort</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="#" style="color:rgb(180, 122, 36)" aria-current="page">Contact Us</a>
