--- a/form.html
+++ b/form.html
@@ -21,10 +21,10 @@
               <div class="collapse navbar-collapse px-3" id="navbarNav" style="border:4px double black">
                 <ul class="navbar-nav mx-auto text-center" >
                   <li class="nav-item">
-                    <a class="nav-link " href="pages/index.html" >Home</a>
+                    <a class="nav-link " href="index.html" >Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="pages/comfort_prods.html" >Baby's Comfort</a>
+                    <a class="nav-link " href="comfort_prods.html" >Baby's Comfort</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="#" style="color:rgb(180, 122, 36)" aria-current="page">Contact Us</a>
