--- a/form.html
+++ b/form.html
@@ -12,27 +12,27 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg px-3 shadow">
-            <div class="container-fluid" style="--bs-gutter-x: 0;">
-              <a class="navbar-brand nav-logo" href="#">Mommies Baby</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span> <!--Toggle icon svg here-->
-              </button>
-              <div class="collapse navbar-collapse px-3" id="navbarNav" style="border:4px double black">
-                <ul class="navbar-nav mx-auto text-center" >
-                  <li class="nav-item">
-                    <a class="nav-link " href="index.html" >Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="comfort_prods.html" >Baby's Comfort</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#" style="color:rgb(180, 122, 36)" aria-current="page">Contact Us</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg bg-custom px-3 shadow">
+        <div class="container-fluid" style="--bs-gutter-x: 0;">
+          <a class="navbar-brand nav-logo" href="#">Mommies Baby</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span> <!--Toggle icon svg here-->
+          </button>
+          <div class="collapse navbar-collapse px-3" id="navbarNav" style="border:4px double black">
+            <ul class="navbar-nav mx-auto text-center" >
+              <li class="nav-item">
+                <a class="nav-link " href="index.html" >Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="comfort_prods.html" >Baby's Comfort</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="#" style="color:rgb(180, 122, 36)"  aria-current="page">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <main>
       <form action="https://formsubmit.co/sulaimanhairul@gmail.com" method="POST">
