--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-custom px-3 shadow">
+      <nav class="navbar navbar-expand-lg px-3 shadow">
         <div class="container-fluid" style="--bs-gutter-x: 0;">
           <a class="navbar-brand nav-logo" href="#">Mommies Baby</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
     </header>
     <main>
       <form action="https://formsubmit.co/sulaimanhairul@gmail.com" method="POST">
-      <div class="container text-center bg-custom shadow my-4 py-4 enquiry-form">
+      <div class="container text-center bg-form shadow my-4 py-4 enquiry-form">
           <div class="row ">
             <div class="col">
               <h1 class="page-title">Contact Us</h1>
