--- a/form.html
+++ b/form.html
@@ -43,7 +43,7 @@
               <hr class="divider">
               <label for="email"class="form-label">Enter email: </label>
               <input type="email" name="email" placeholder="Email Address" required>
-              <input type="hidden" name="_next" value="http://hrlslmn.github.io/Baby-blog/thank-you.html">
+              <input type="hidden" name="_next" value="hrlslmn.github.io/Baby-blog/thank-you.html">
             </div>
           </div>
           <div class="row">
