--- a/comfort_prods.html
+++ b/comfort_prods.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="styles/comfort.css">
     <title>Comfort Products</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMH0616B6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FMH0616B6S');
+</script>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-custom px-3 shadow">
