--- a/form.html
+++ b/form.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="styles/mommies.css">
     <title>Mommies Comfort</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMH0616B6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FMH0616B6S');
+</script>
 <body>
     <header>
       <nav class="navbar navbar-expand-lg px-3 shadow">
