--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="styles/main.css">
     <title>Mommies Baby</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FMH0616B6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FMH0616B6S');
+</script>
 <body>
   
     <header>
