--- a/form.html
+++ b/form.html
@@ -74,7 +74,7 @@
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2023 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">Mommiesbaby.com</a>
+        <a class="text-dark" href="http://www.mommiesbaby.com/">Mommiesbaby.com</a>
       </div>
       <!-- Copyright -->
     </footer>  
