--- a/thank-you.html
+++ b/thank-you.html
@@ -33,7 +33,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
           © 2023 Copyright:
-          <a class="text-dark" href="#">Mommiesbaby.com</a>
+          <a class="text-dark" href="www.mommiesbaby.com">Mommiesbaby.com</a>
         </div>
         <!-- Copyright -->
       </footer> 
