enhance meta tag

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="Best Baby Products Review - Expert Recommendations | Affiliate Blog" content="Discover the top-rated baby products handpicked by our team of experts. Our affiliate blog provides comprehensive reviews, comparisons, and buying guides for everything from strollers and car seats to diapers and feeding essentials. Whether you're a new parent or a seasoned pro, our recommendations will help you make informed decisions and ensure your baby gets the best. Shop with confidence and get exclusive discounts with our links">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous" defer></script>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/main.css">
-    <title>Mommies Baby</title>
+    <title>Babies Best Choice - Your Ultimate Guide to Top-Rated Baby Products with Exclusive Discounts</title>
 </head>
 <body>
   
