--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-custom px-3 shadow-lg">
             <div class="container-fluid" style="--bs-gutter-x: 0;">
-              <a class="navbar-brand nav-logo" href="#">Mommies Baby</a>
+              <a class="navbar-brand nav-logo" href="index.html">Mommies Baby</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span> <!--Toggle icon svg here-->
               </button>
