--- a/comfort_prods.html
+++ b/comfort_prods.html
@@ -101,10 +101,10 @@
           <div class="row ">
             <a href="https://momcozy.sjv.io/c/2812006/1506337/16474" style="color:black"><h3 class="text-center page-title">BabyCozy Soft Diapers</h3></a>
             <div class="col">
-              <a href="https://momcozy.sjv.io/c/2812006/1506337/16474"><img src="images/BbyCozy-1.jpg" alt="" class="img-fluid"></a>
+              <a href="https://momcozy.sjv.io/c/2812006/1506337/16474"><img src="images/BbyCozy-1.jpg" alt="baby diaper recommendation" class="img-fluid"></a>
             </div>
             <div class="col">
-              <a href="https://momcozy.sjv.io/c/2812006/1506337/16474"><img src="images/BbyCozy-2.jpg" alt="" class="img-fluid"></a>
+              <a href="https://momcozy.sjv.io/c/2812006/1506337/16474"><img src="images/BbyCozy-2.jpg" alt="baby diaper recommendation" class="img-fluid"></a>
             </div>
           </div>
         </div>
