--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
                     <a class="nav-link active" aria-current="page" href="#" style="color:rgb(180, 122, 36)">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="comfort_prods.html" >Baby's Comfort</a>
+                    <a class="nav-link" href="comfort_prods.html" >Comfort Diaper</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="baby-essentials.html">Babies & Mommies Essentials</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="form.html" >Contact Us</a>
