--- a/form.html
+++ b/form.html
@@ -34,7 +34,10 @@
                 <a class="nav-link " href="index.html" >Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="comfort_prods.html" >Baby's Comfort</a>
+                <a class="nav-link" href="comfort_prods.html" >Comfort Diaper</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="baby-essentials.html">Babies & Mommies Essentials</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#" style="color:rgb(180, 122, 36)"  aria-current="page">Contact Us</a>
